<resources>
    <string name="app_name">Crossword Game</string>

    <string name="hello_world">This is Crossword</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Hint:</string>
    <string name="title_activity_cross_word_list">CrossWordListActivity</string>
    <string name="action_clear">Clear</string>
    <string name="action_verify">Verify</string>
    <string name="action_list">List</string>
    <string name="title_activity_crossword_standart">Crossword_standart</string>
    <string name="label1">Standart</string>
    <string name="label2">List</string>
    <string name="A">А</string>
    <string name="А">А</string>
    <string name="Ч">Ч</string>
    <string name="М">М</string>
    <string name="Н">Н</string>
    <string name="Б">Б</string>
    <string name="Ж">Ж</string>
    <string name="Ц">Ц</string>
    <string name="ь">ь</string>
    <string name="З">З</string>
    <string name="Щ">Щ</string>
    <string name="Ш">Ш</string>
    <string name="Л">Л</string>
    <string name="К">К</string>
    <string name="Й">Й</string>
    <string name="Х">Х</string>
    <string name="Г">Г</string>
    <string name="Ф">Ф</string>
    <string name="Д">Д</string>
    <string name="С">С</string>
    <string name="Ю">Ю</string>
    <string name="П">П</string>
    <string name="О">О</string>
    <string name="И">И</string>
    <string name="У">У</string>
    <string name="Т">Т</string>
    <string name="Р">Р</string>
    <string name="Е">Е</string>
    <string name="В">В</string>
    <string name="Я">Я</string>
    <string name="Ъ">Ъ</string>
    <string name="standart_fragment">Standart</string>
    <string name="list_fragment">List</string>
    <string name="change_fragment">Change Fragment</string>
    <string name="title_activity_about">About</string>
    <string name="about">About</string>
    <string name="about_content">Hello This is my studing project, during my Android education cource. Enjoy playing the game! Ivan Kolev</string>
</resources>
